Fixed a few findbugs problems.
git-svn-id: https://svn.dbc.dk/repos/dataio/trunk@61518 b87a6194-a221-0410-ad6f-3b8ec35bba13